# parakeet

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  config.h.in
atomic/: CMakeLists.txt  atomic.h  atomic_gcc_amd64.h  config.h.in  process.h
cmake/: FindCUnit.cmake
include/: limiter.h  mtx.h
mtx/: CMakeLists.txt  mtx.c  mtx.h
shm/: CMakeLists.txt  shm.h
src/: CMakeLists.txt
src/atomic/: CMakeLists.txt  atomic_gcc_ppc.h  atomic_gcc_sparc64.h  atomic_gcc_x86.h  atomic_sunpro_sparc64.h  spinlock.c
src/limiter/: CMakeLists.txt  limiter.c
src/mtx/: CMakeLists.txt  mtx.c
src/shm/: CMakeLists.txt  shm.c
test/: CMakeLists.txt  main.c  suit.c
